--- a/accounts/templates/accounts/profile_form.html
+++ b/accounts/templates/accounts/profile_form.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap4 %}
-
+{% block title %}
+My Profile
+{% endblock %}
+{% block css %}
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive/responsive.css' %}" rel="stylesheet">
+{% endblock %}
 {% block content %}
+<div class="container">
 {% if request.resolver_match.url_name == 'signup' %}
     <h1>SignUp</h1>
 {% elif request.resolver_match.url_name == 'login' %}
@@ -23,5 +31,5 @@
     </form>
     {% endif %}
 {% endif %}
-   
+</div>
 {% endblock %}
