--- a/accounts/templates/accounts/people.html
+++ b/accounts/templates/accounts/people.html
@@ -1,9 +1,86 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap4 %}
-{% block title %}My Profile{% endblock %}
+{% block css %}
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive/responsive.css' %}" rel="stylesheet">
+    .orangelight { height:500px; }
+    li{color:white}
+    
+{% endblock %}
+{% block title %}{{ people.username }}{% endblock %}
 
 {% block content %}
-<h2>{{ people.username }}'s Profile</h2>
+<!-- ****** Breadcumb Area Start ****** -->
+<div class="breadcumb-nav">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="{% url 'movies:list' %}"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">My Page</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+<div class="intro intro-carousel">
+    
+      <div class="carousel-item-a intro-item bg-image" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://images.pexels.com/photos/949587/pexels-photo-949587.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');background-repeat: no-repeat">
+        <div class="overlay overlay-a"></div>
+        <div class="intro-content display-table">
+          <div class="table-cell">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8">
+                  <div class="intro-body">
+                    <p class="intro-title-top">팔로잉 | <b>{{ people.followings.all.count }}</b> 
+                      <br>팔로워 | <b>{{ people.followers.all.count }}</b></p>
+                    <h2 class="intro-title mb-4">
+                      <span class="color-b">{{ people.username }}</span> 's Profile
+                      </h2>
+                    <p class="intro-subtitle intro-price">
+                      <a href="{% url 'accounts:profile' %}"><span class="price-a">Profile Edit</span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+      </div>
+  </div>
+  </div>
+
+
+
+<div class="breadcumb-area" style="background-image: url(img/bg-img/breadcumb.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="bradcumb-title text-center">
+                    <h2>{{ people.username }}'s Profile</h2>
+                    {% if people == user %}
+                        <div class="text-center">
+                        
+                            <a href="{% url 'accounts:update' %}" class="badge badge-info">회원정보수정</a>
+                            <a href="{% url 'accounts:profile' %}" class="badge badge-warning mx-2">프로필수정</a>
+                            <a href="{% url 'accounts:change_password' %}" class="badge badge-danger ">비밀번호변경</a>
+                        </div>
+                    {% endif %}
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    
+    <!-- ****** Breadcumb Area End ****** -->
+<div class="container">
+<!--<h2>{{ people.username }}'s Profile</h2>-->
 <!--팔로우 추가-->
 <p>팔로잉 : {{ people.followings.all.count }} / 팔로워 : {{ people.followers.all.count }}</p>
 {% if user != people %}
@@ -14,14 +91,11 @@
     {% endif %}
 {% endif %}
 
-{% if people == user %}
-    <a href="{% url 'accounts:update' %}" class="badge badge-info mx-2">회원정보수정</a>
-    <a href="{% url 'accounts:profile' %}" class="badge badge-warning ">프로필수정</a>
-    <a href="{% url 'accounts:change_password' %}" class="badge badge-warning ">비밀번호변경</a>
-{% endif %}
+
 <hr>
 <h6>E-mail : {{ people.email }}</h6>
 <h6>Introduction : {{ people.profile.introduction }}</h6>
 <h6>Year of Birth : {{ people.profile.year_of_birth }}년</h6>
 <h6>Favorite Genre : {{ people.profile.favorite_genre }}</h6>
+</div>
 {% endblock %}
