--- a/final_project/templates/base.html
+++ b/final_project/templates/base.html
@@ -3,30 +3,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>Let's MOVIE - {% block title %}{% endblock %}</title>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'movies/camera.jpg' %}">
-    <style>
-        body {
-            background-color : pink;
-            height: 10000px;
+    <style type="text/css">
+        body{
+            
+        background-color: #2c2e2f;
+    
         }
     </style>
+    {% block css %}
+    
+    {% endblock %}
+    
 </head>
-<body>
+<body style="background-color:#353232">
     <!--Navbars - 페이지 모듈화-->
     {% include 'movies/_nav.html' %}
     
-    <div class="container">
-        {% if user.is_authenticated %}
-            <h6 class="text-center my-2">{{ user.username }}님, 반갑습니다!</h6>
-        {% else %}
-            <h6 class="text-center my-2">활동하려면 로그인하세요!</h6>
-        {% endif %}
-        
+    <div>
         {% block content %}
         {% endblock %}
     </div>
