--- a/movies/templates/movies/_nav.html
+++ b/movies/templates/movies/_nav.html
@@ -1,46 +1,46 @@
-<!-- templates/posts/_nav.html -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark navbar-light bg-dark px-5">
-    <a class="navbar-brand" href="{% url 'movies:list' %}">
-        <i class="fas fa-film"> Let's MOVIE</i>
-    </a>
+<nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
+    <div class="container">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+        <a class="navbar-brand text-brand" href="{% url 'movies:list' %}">Let's <span class="color-b">MOVIE</span></a>
+        <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
+        <span class="fa fa-search" aria-hidden="true"></span>
+      </button>
+        <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="movies/list.html">Home</a>
+                </li>
+                {% if user.is_authenticated %}
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:user_profile' user.username %}">mypage</a>
+                </li>
 
+                <li class="nav-item">
+                    <a href="{% url 'accounts:logout' %}" class="nav-link">LogOut</a>
+                </li>
 
-    <div class="collapse navbar-collapse justify-content-between">
-        <div></div>
-        <div class="navbar-nav">
-            <li class="nav-item">
-                <span class="navbar-text text-light">{{ user.username }} 님 반갑습니다.</span>
-            </li>
-        </div>
-        
-        <div class="navbar-nav">
-            {% if not user.is_authenticated %}
-            
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                {% else %}
+
                 <li class="nav-item">
                     <a href="{% url 'accounts:login' %}" class="nav-link">LogIn</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'accounts:signup' %}" class="nav-link">SignUp</a>
                 </li>
-            {% else %}
-                {% if user.is_superuser%}
-                    <li class="nav-item">
-                        <a href="{% url 'movies:new' %}" class="nav-link">NEW</a>
-                    </li>
                 {% endif %}
-                
-                <li class="nav-item">
-                    <a href="{% url 'accounts:user_profile' user.username %}" class="nav-link">MyPage</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'accounts:logout' %}" class="nav-link">LogOut</a>
-                </li>
-            {% endif %}
+            </ul>
         </div>
-        
+        <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
+        <span class="fa fa-search" aria-hidden="true"></span>
+      </button>
     </div>
 </nav>
+ 
