190514 | Let's Movie design

--- a/final_project/templates/base.html
+++ b/final_project/templates/base.html
@@ -24,7 +24,7 @@
     {% endblock %}
     
 </head>
-<body style="background-color:#353232">
+<body style="background-color:black">
     <!--Navbars - 페이지 모듈화-->
     {% include 'movies/_nav.html' %}
     
