--- a/movies/static/style.css
+++ b/movies/static/style.css
@@ -50,6 +50,7 @@ body {
     font-family: 'Poppins', sans-serif;
     position: relative;
     z-index: auto;
+    background-color:black;
 }
 
 h1,
