--- a/movies/templates/movies/movie_detail.html
+++ b/movies/templates/movies/movie_detail.html
@@ -1,107 +1,193 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load bootstrap4 %}
-{% block title %}{{ movie.title }}{% endblock %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% load bootstrap4 %} 
+{% block title %}{{ movie.title }}{% endblock %} 
 {% block css %}
-    <link href="{% static 'style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/responsive/responsive.css' %}" rel="stylesheet">
-{% endblock %}
+<link href="{% static 'style.css' %}" rel="stylesheet">
+<link href="{% static 'css/responsive/responsive.css' %}" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
+<style type="text/css">
+  a, h5, h6 { color : white; 
+              font-family: 'Noto Sans KR', sans-serif;
+              margin: 0 0 0rem;
+            }
+  body { height: 2500px;}
+</style>
+{% endblock %} 
 
 {% block content %}
-
 <div class="intro intro-carousel">
-    
-      <div class="carousel-item-a intro-item bg-image" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('{{ movie.poster_url }}');background-size:cover;">
-        <div class="overlay overlay-a"></div>
-        <div class="intro-content display-table">
-          <div class="table-cell">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-8 ">
-                  <div class="intro-body">
-                    <h6 class="intro-title-top">{{ movie.release_year }}</h2>
-                    <h5>역대 한국개봉 영화 흥행 <b>{{ movie.rank }}</b>위</h5>
-                    <h5 class="intro-title mb-3">
-                      <span class="color-b">{{ movie.title }}</span>
-                      </h5>
-                      <h5>네티즌평점 | <b>{{ movie.score }}</b>점</h5>
-                      <p class="intro-title-top">{{ movie.distributor}}</p>
-                      <p class="intro-title-top">{{ movie.story}}</p>
-                      <div class="mx-5">
-        <!--<p>개봉일자 : {{ movie.release_date }} 개봉</p> 모델에 추가해도 될 듯-->
-        <h6>누적 관객수 | <b>{{ movie.audience }}</b>명</h6>
-        <h6>국가 | <b>{{ movie.nationality }}</b></h6>
-        <h6>장르 | <b>{{ movie.genre }}</b></h6>
-        <h6><b>감독 | {{ movie.director }}</b></h6>
-        <!--<h6><b>배우 | {{ movie.actors }}</b></h6>-->
-        <h6>상영시간 | <b>{{ movie.running_time }}</b></h6>
-        <h6>상영등급 | <b>{{ movie.grade }}</b></h6>
-        <h6>배급사 | <b>{{ movie.distributor }}</b></h6>
-        </div>
+  <div class="carousel-item-a intro-item bg-image" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('{{ movie.poster_url }}');background-size:cover;">
+    <div class="overlay overlay-a">
+      
     </div>
-                    
-                    
-                    
+      <div class="intro-content display-table">
+        <div class="table-cell">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <h6 class="intro-title-top"></h2>
+                  <div class="intro-body">
+                
+                    <div class="d-flex justify-content-around">
+                      <div>
+                        <img src="{{ movie.poster_url }}" alt="{{ movie.title }}" height=400px width=300px>
+                      </div>
+                      <div class="my-5 ml-3">
+                        <h5>역대 한국개봉 영화 흥행 <b>{{ movie.rank }}</b>위</h5>
+                        <h5 class="intro-title mb-3"><span class="color-b">{{ movie.title }}</span></h5>
+                        <!-- 좋아요 -->
+
+                        <a href="{% url 'movies:like' movie.pk %}" class="card-link">
+                          {% if user in movie.like_users.all %}
+                            <i class="fas fa-heart fa-lg" style="color:crimson"></i>
+                          {% else %}
+                            <i class="far fa-heart fa-lg" style="color:white"></i>
+                          {% endif %}
+                        </a>
+                        <h6> {{ movie.like_users.count }} 명이 좋아합니다.</h6>
+
+                        <h5>네티즌평점 <b>{{ movie.score }}</b>점</h5>
+                        
+                        
+                       </div>
+                       
+                       <div class="my-5">
+                          <h6>개봉 | {{ movie.release_year }}</h6>
+                          
+                          <h6>국가 | <b>{{ movie.nationality }}</b></h6>
+                          <h6>장르 | <a href="{% url 'movies:click_keyword' '영화 장르' movie.genre %}">{{ movie.genre }}</a></h6>
+                          <h6>감독 | <a href="{% url 'movies:click_keyword' '영화 감독' movie.director %}">{{ movie.director }}</a></h6>
+                          <h6>배우 |  
+                          {% for actor in movie.actors.all reversed %}
+                            <a href="{% url 'movies:click_keyword' '영화 배우' actor %}">{{ actor }}</a>
+                          {% endfor %}
+                          </h6>                          
+                          <h6>상영시간 | <b>{{ movie.running_time }}</b></h6>
+                          <h6>상영등급 | <b>{{ movie.grade }}</b></h6>
+                          <h6>배급사 | <b>{{ movie.distributor}}</b></h6>
+                          <h5>누적관람객 {{ movie.audience }}</b>명</h5>
+                        </div>
+                        
+                    </div>
+                      <p class="intro-title-top mt-5">{{ movie.story }}</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-      </div>
-  </div>
-</div>
-
-
-{% if user.is_authenticated %}
-
-<!--댓글 작성하면서 평점(10점만점, 별 5개만점) 받아보자-->
-    <form action="{% url 'movies:comment_create' movie.pk %}" method="POST">
-        {% csrf_token %}
-        <div class="d-flex justify-conten-align">
-            <div class="stars">
-                <input class="star star-5" id="star-5" type="radio" name="star" value="10"/>
-                <label class="star star-5" for="star-5"></label>
-                <input class="star star-4" id="star-4" type="radio" name="star" value="8"/>
-                <label class="star star-4" for="star-4"></label>
-                <input class="star star-3" id="star-3" type="radio" name="star" value="6"/>
-                <label class="star star-3" for="star-3"></label>
-                <input class="star star-2" id="star-2" type="radio" name="star" value="4"/>
-                <label class="star star-2" for="star-2"></label>
-                <input class="star star-1" id="star-1" type="radio" name="star" value="2"/>
-                <label class="star star-1" for="star-1"></label>
-            </div>
-            <div style="display: inline;">
-            {% bootstrap_form comment_form %}
-            </div>
-            <input type="submit" value="작성" class="btn btn-primary">
         </div>
-    </form>
+      </div>
+    </div>
+  </div>
 
+<div class="container">
+  {% if user.is_authenticated %}
+  <!--댓글 작성하면서 평점(10점만점, 별 5개만점) 받아보자-->
+  <form action="{% url 'movies:comment_create' movie.pk %}" method="POST">
+    {% csrf_token %}
+    <div class="d-flex justify-content-center">
+      <div class="stars">
+        <input class="star star-5" id="star-5" type="radio" name="star" value="10" />
+        <label class="star star-5" for="star-5"></label>
+        <input class="star star-4" id="star-4" type="radio" name="star" value="8" />
+        <label class="star star-4" for="star-4"></label>
+        <input class="star star-3" id="star-3" type="radio" name="star" value="6" />
+        <label class="star star-3" for="star-3"></label>
+        <input class="star star-2" id="star-2" type="radio" name="star" value="4" />
+        <label class="star star-2" for="star-2"></label>
+        <input class="star star-1" id="star-1" type="radio" name="star" value="2" />
+        <label class="star star-1" for="star-1"></label>
+      </div>
+    </div>
+    {% bootstrap_form comment_form %}
+    <div class="d-flex justify-content-center">
+    <input type="submit" value="평가완료!" class="btn btn-outline-primary btn-sm">
+    </div>
+  </form>
 {% else %}
-<a href="{% url 'accounts:login' %}">댓글을 작성하려면 로그인하세요.</a>
+<div class="d-flex justify-content-center mt-5">
+  <p>영화에 대해 평가하려면 로그인하세요!</p>
+</div>
+<div class="d-flex justify-content-center">
+  <a href="{% url 'accounts:login' %}" class="btn btn-outline-info btn-sm" role="button" aria-pressed="true">login</a>
+</div>
 {% endif %}
 
-
-
-<hr>
-{% for comment in movie.comment_set.all %}
-<div class="d-flex justify-content-between">
-    <span><b>{{ comment.score }} | {{ comment.user }}</b> | {{ comment.content }}</span>
-    <div>
-    <span>{{ comment.created_at }}</span>
-    {% if comment.user == request.user %}
-        <form action="{% url 'movies:comment_delete' movie.pk comment.pk %}" method="POST" style="display: inline;">
-            {% csrf_token %}
-            <input type="submit" value="X" class="btn btn-danger">
-        </form>
-    {% endif %}
-    </div>
+<!--alert messages-->
+{% if messages %}
+<h1>ddddddddddddddddddddd</h1>
+<div class="messages">
+{% for message in messages %}
+<div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+{{ message.message }}
 </div>
+{% endfor %}
+</div>
+{% endif %} 
+
+<h6>{{ movie.comment_set.count }}개의 댓글이 달렸습니다!</h6>
+<hr> {% for comment in movie.comment_set.all %}
+<ul class="list-group list-group-flush">
+  <li class="list-group-item">
+    <a style="color:black" href="{% url 'accounts:user_profile' comment.user %}">{{ comment.user }}</a>
+    <div class="d-flex justify-content-between">
+      <div>
+        {% if comment.score == 2%}
+        <span style="color:red">★ </span>
+        {% elif comment.score == 4%}
+        <span style="color:red">★★</span>
+        {% elif comment.score == 6%}
+        <span style="color:red">★★★</span>
+        {% elif comment.score == 8%}
+        <span style="color:red">★★★★</span>
+        {% else %}
+        <span style="color:red">★★★★★</span>
+        {% endif %}  
+        <span>{{ comment.content }}</span>
+      </div> 
+      <div> 
+      
+      {% if comment.user == user %}
+      <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#commentUpdate">V</button>
+        <form action="{% url 'movies:comment_delete' movie.pk comment.pk %}" method="POST" style="display: inline;">
+          {% csrf_token %}
+          <input type="submit" value="X" class="btn btn-danger btn-sm">
+        </form>
+        {% endif %}
+      </div>
+    </div>
+  </li>
+</ul>
 {% empty %}
 <p>첫번째 댓글을 작성해주세요!</p>
 {% endfor %}
 </div>
 
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-{% endblock %}
 
+
+
+<div class="modal fade" id="commentUpdate" tabindex="-1" role="dialog"aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">댓글 수정하기</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body">
+        ...ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"> 
+</div>
+{% endblock %}
