--- a/movies/templates/movies/forms.html
+++ b/movies/templates/movies/forms.html
@@ -2,10 +2,40 @@
 {% load bootstrap4 %}
 
 {% block content %}
+
+{% if request.resolver_match.url_name == 'create' %}
 <h1>영화 추가하기</h1>
-    <form action="" method="POST">
+<form action="" method="POST">
+{% csrf_token %}
+{% bootstrap_form form %}
+    <input type="submit" value="Submit" class="btn btn-danger"/>
+</form>
+
+
+{% elif request.resolver_match.url_name == 'comment_update' %}
+<form action="{% url 'movies:comment_update' form.id %}" method="POST">
     {% csrf_token %}
+    <div class="d-flex justify-content-center">
+      <div class="stars">
+        <input class="star star-5" id="star-5" type="radio" name="star" value="10" />
+        <label class="star star-5" for="star-5"></label>
+        <input class="star star-4" id="star-4" type="radio" name="star" value="8" />
+        <label class="star star-4" for="star-4"></label>
+        <input class="star star-3" id="star-3" type="radio" name="star" value="6" />
+        <label class="star star-3" for="star-3"></label>
+        <input class="star star-2" id="star-2" type="radio" name="star" value="4" />
+        <label class="star star-2" for="star-2"></label>
+        <input class="star star-1" id="star-1" type="radio" name="star" value="2" />
+        <label class="star star-1" for="star-1"></label>
+      </div>
+    </div>
     {% bootstrap_form form %}
-        <input type="submit" value="Submit" class="btn btn-danger"/>
-    </form>
+    <div class="d-flex justify-content-center">
+    <input type="submit" value="수정하기!" class="btn btn-outline-primary btn-sm">
+    </div>
+  </form>
+{% endif %}
+
 {% endblock %}
+
+
