--- a/movies/templates/movies/search_movie.html
+++ b/movies/templates/movies/search_movie.html
@@ -6,7 +6,7 @@
     <link href="{% static 'css/responsive/responsive.css' %}" rel="stylesheet">
     <style type="text/css">
     h4 { color : white; }
-    .breadcumb-area { margin-top: 113px; } <
+    .breadcumb-area { margin-top: 113px; }
     </style>
 {% endblock %}
 
@@ -51,7 +51,21 @@
     </div>
 </div>
 
-
+<!-- ****** Footer Menu Area  ****** -->
+    <footer class="footer_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <!-- Copywrite Text -->
+                    <div class="copy_right_text text-center">
+                        <p>Copyright @2019 All rights reserved</p><br>
+                        <p>This Movie Site is made with Seungju <i class="fa fa-heart-o" aria-hidden="true"></i> Chaewon by <a href="https://www.ssafy.com/" target="_blank">SSAFY</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 <script src="{% static 'lib/ionicons/ionicons.min.css' %}"></script>
 <script src="{% static 'lib/popper/popper.min.js' %}"></script>
 <script src="{% static 'lib/bootstrap/js/bootstrap.min.js' %}"></script>
