--- a/movies/templates/movies/_nav.html
+++ b/movies/templates/movies/_nav.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 mb-2">
           <div class="form-group">
 
-            <label for="price">카테고리</label>
+            <label for="price">Category</label>
             <select class="form-control form-control-lg form-control-a" name="category" id="price">
                 <option>영화 제목</option>
                 <option>영화 감독</option>
@@ -42,6 +42,7 @@
 
 <!--/ Nav Star /-->
 <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
+
   <div class="container">
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span></span>
@@ -70,13 +71,11 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:user_profile' user.username %}">mypage</a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:logout' %}">LogOut</a>
-        </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:followings' %}">Followings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:logout' %}">LogOut</a>
         </li>
         {% else %}
 
@@ -93,6 +92,7 @@
       <span class="fa fa-search" aria-hidden="true"></span>
     </button>
   </div>
+    
 </nav>
 
 <!-- Jquery-2.2.4 js -->
