--- a/movies/templates/movies/forms.html
+++ b/movies/templates/movies/forms.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
-
+{% block title %}
+New Movie
+{% endblock %}
 {% block content %}
+<div class="breadcumb-area" style="background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/vfPFP3W/movie-theater-projection-reels-in-elegant-looping-dark-background_q1pqoeh9__F0000.png');">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="bradcumb-title text-center">
+                    <h2>Welcome!</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-{% if request.resolver_match.url_name == 'create' %}
+{% if request.resolver_match.url_name == 'new' %}
 <h1>영화 추가하기</h1>
 <form action="" method="POST">
 {% csrf_token %}
@@ -13,7 +26,7 @@
 
 
 {% elif request.resolver_match.url_name == 'comment_update' %}
-<form action="{% url 'movies:comment_update' form.id %}" method="POST">
+<form action="{% url 'movies:comment_update' comment.id %}" method="POST">
     {% csrf_token %}
     <div class="d-flex justify-content-center">
       <div class="stars">
