--- a/accounts/templates/accounts/followings.html
+++ b/accounts/templates/accounts/followings.html
@@ -8,10 +8,10 @@
     body { height: 2000px;}
     .wow { border: 1px dashed coral;
           padding-top: 10px;
-
-
           padding-left: 10px;
     }
+    h4 { color : white; }
+    .breadcumb-area { margin-top: 113px; }
     </style>
 {% endblock %}
 
@@ -20,7 +20,17 @@ followings
 {% endblock %}
 
 {% block content %}
-<div style="height:200px"></div>
+<div class="breadcumb-area" style="background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/vfPFP3W/movie-theater-projection-reels-in-elegant-looping-dark-background_q1pqoeh9__F0000.png');">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="bradcumb-title text-center">
+                    <h4>내가 follow한 유저들 보기</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <section class="archive-area section_padding_80 text-center">
         <div class="container">
